examples/test/testpolicy2782.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2782
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key18: value38
      key27: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value41
          key11: value49
      podSelector:
        matchLabels:
          key1: value10
          key13: value32
